Renaming source again

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/labs/0",
+      "source": "COMP4537/labs/0",
       "destination": "/labs/0/index.html"
     }
   ]
