--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "COMP4537/labs/0",
       "destination": "/labs/0/index.html"
+    },
+    {
+      "source": "COMP4537/labs/1",
+      "destination": "/labs/1/index.html"
     }
   ]
 }
