Attempting api directory

--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
     },
     {
       "source": "COMP4537/labs/3/getDate",
-      "destination": "/labs/3/getDate/server.js"
+      "destination": "/api/lab3/server.js"
     }
   ]
 }
