--- a/vercel.json
+++ b/vercel.json
@@ -13,21 +13,7 @@
       "destination": "/labs/1/writer.html"
     }
   ],
-  "routes": [
-    {
-      "src": "/api/lab3/getDate",
-      "dest": "/api/server.js"
-    },
-    {
-      "src": "/COMP4537/labs/3/getDate",
-      "dest": "/api/server.js"
-    }
-  ],
-  "builds": [
-    {
-      "src": "api/getDate.js",
-      "use": "@vercel/node"
-    }
-  ]
+  "functions": {
+    "api/lab3/*.js": {}
+  }
 }
-
