Revert last changes

--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     {
       "source": "/COMP4537/labs/1/writer",
       "destination": "/labs/1/writer.html"
+    },
+    {
+      "source": "/api/lab3/readFile/(.*)",
+      "destination": "/api/lab3/readFile.js"
     }
   ]
 }
