--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "api/lab4"]
 	path = api/lab4
 	url = https://github.com/mho879/comp4537-lab4.git
+[submodule "COMP4537/labs/4"]
+	path = COMP4537/labs/4
+	url = https://github.com/mho879/comp4537-lab4.git
