Update vercel.json for lab4 frontend deployment test

--- a/vercel.json
+++ b/vercel.json
@@ -17,8 +17,8 @@
       "destination": "/api/lab3/readFile.js"
     },
     {
-      "source": "/COMP4537/labs/4/index",
-      "destination": "/labs/3/index.html"
+      "source": "/COMP4537/labs/4",
+      "destination": "/labs/4/index.html"
     }
   ]
 }
