Testing vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -18,7 +18,7 @@
     },
     {
       "source": "/COMP4537/labs/4",
-      "destination": "/labs/4/index.html"
+      "destination": "/labs/4/frontend/index.html"
     }
   ]
 }
